--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD=my_password
 POSTGRES_DB=my_db
 DB_HOST=db
 DB_PORT=5432
+SECRET_KEY=some_secret_key
+DJANGO_DEBUG=False
+ALLOWED_HOSTS=127.0.0.1,localhost
