Add reference to google application credentials example

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ DB_PORT=5432
 SECRET_KEY=some_secret_key
 DJANGO_DEBUG=False
 ALLOWED_HOSTS=127.0.0.1,localhost
+GOOGLE_APPLICATION_CREDENTIALS="gcp/gcp-token.json"
